--- a/06_StatisticalInference/01_02_Probability/index.Rmd
+++ b/06_StatisticalInference/01_02_Probability/index.Rmd
@@ -1,17 +1,17 @@
 ---
-title       : Probability
-subtitle    : Statistical Inference
-author      : Brian Caffo, Jeff Leek, Roger Peng
-job         : Johns Hopkins Bloomberg School of Public Health
-logo        : bloomberg_shield.png
-framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
-highlighter : highlight.js  # {highlight.js, prettify, highlight}
-hitheme     : tomorrow      # 
+title: "Probability"
+author: "Brian Caffo, Jeff Leek, Roger Peng"
+highlighter: highlight.js
+hitheme: tomorrow
+job: Johns Hopkins Bloomberg School of Public Health
+logo: bloomberg_shield.png
+mode: selfcontained
+subtitle: Statistical Inference
+framework: io2012
 url:
-  lib: ../../librariesNew
   assets: ../../assets
-widgets     : [mathjax]            # {mathjax, quiz, bootstrap}
-mode        : selfcontained # {standalone, draft}
+  lib: ../../librariesNew
+widgets: mathjax
 ---
 
 ## Notation
