Practical ML Assignment1
Data slicing finished

--- a/08_PracticalMachineLearning/019predictingWithTrees/index.Rmd
+++ b/08_PracticalMachineLearning/019predictingWithTrees/index.Rmd
@@ -1,17 +1,20 @@
 ---
-title       : Predicting with trees
-subtitle    : 
-author      : Jeffrey Leek
-job         : Johns Hopkins Bloomberg School of Public Health
-logo        : bloomberg_shield.png
-framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
-highlighter : highlight.js  # {highlight.js, prettify, highlight}
-hitheme     : tomorrow   # 
+title: "Predicting with trees"
+author: "Jeffrey Leek"
+highlighter: highlight.js
+output:
+  html_document:
+    df_print: paged
+job: Johns Hopkins Bloomberg School of Public Health
+logo: bloomberg_shield.png
+mode: selfcontained
+hitheme: tomorrow
+subtitle: null
+framework: io2012
 url:
-  lib: ../../librariesNew
   assets: ../../assets
-widgets     : [mathjax]            # {mathjax, quiz, bootstrap}
-mode        : selfcontained # {standalone, draft}
+  lib: ../../librariesNew
+widgets: mathjax
 ---
 
 
